テーブル設計を見直し、EntityとSQLに修正を加えた。またテストデータ登録も行った。
