# openapi.yaml
@@ -21,9 +21,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/TweetRes'
+                $ref: '#/components/schemas/GetTweetsRes'
         '401':
           description: unauthorized
     post:
@@ -54,14 +52,16 @@ paths:
           in: path
           description: ID of tweet to return
           required: true
-          schema: { type: integer, format: int64 }
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: 'success'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TweetRes'
+                $ref: '#/components/schemas/GetTweetsByTweetIdRes'
         '400':
           description: no tweet
         '401':
@@ -79,7 +79,9 @@ paths:
           in: path
           description: ID of account to return
           required: true
-          schema: { type: integer, format: int64 }
+          schema:
+            type: integer
+            format: int64
       responses:
         '200':
           description: 'success'
@@ -98,33 +100,87 @@ components:
   schemas:
     TweetReq:
       required:
-        - text
+        - tweetText
         - accountId
       type: object
       properties:
-        text: { type: string }
-        accountId: { type: integer, format: int64 }
+        tweetText:
+          type: string
+          example: Now Tweet!
+        accountId:
+          type: integer
+          format: int64
+          example: 1
     TweetRes:
       required:
-        - id
-        - accountName
+        - tweetId
+        - tweetText
         - accountId
-        - text
         - createdAt
       type: object
       properties:
-        id: { type: integer, format: int64 }
-        accountName: { type: string }
-        accountId: { type: integer, format: int64 }
-        text: { type: string }
-        createdAt: { type: string, format: date-time }
-    AccountRes:
+        tweetId:
+          type: integer
+          format: int64
+          example: 20
+        tweetText:
+          type: string
+          example: just setting up my twttr
+        accountId:
+          type: integer
+          format: int64
+          example: 1
+        createdAt:
+          type: string
+          format: date-time
+    GetTweetsRes:
       required:
-        - id
-        - accountName
-        - description
+        - total
+        - tweets
       type: object
       properties:
-        id: { type: integer, format: int64 }
-        accountName: { type: string }
-        description: { type: string }
+        total:
+          type: integer
+          example: 10
+        tweets:
+          type: array
+          items:
+            $ref: '#/components/schemas/TweetRes'
+    GetTweetsByTweetIdRes:
+      required:
+        - data
+        - include
+      type: object
+      properties:
+        data:
+          $ref: '#/components/schemas/TweetRes'
+        include:
+          type: array
+          items:
+            $ref: '#/components/schemas/TweetRes'
+    AccountRes:
+      required:
+        - accountId
+        - displayName
+        - accountName
+        - profileDescription
+        - createdAt
+      type: object
+      properties:
+        accountId:
+          type: integer
+          format: int64
+          example: 1
+        displayName:
+          type: string
+          example: Djack
+        accountName:
+          type: string
+          example: jack
+        profileDescription:
+          type: string
+          example: bitcoin and chill
+        profileImageUrl:
+          type: string
+          example: https://example.com/profile_image.jpg
+
