# src/main/kotlin/com/example/xt3/controller/TweetsController.kt
@@ -2,8 +2,7 @@ package com.example.xt3.controller
 
 import com.example.xt3.domain.service.TweetService
 import com.example.xt3.openapi.generated.controller.TweetsApi
-import com.example.xt3.openapi.generated.model.TweetReq
-import com.example.xt3.openapi.generated.model.TweetRes
+import com.example.xt3.openapi.generated.model.GetTweetsRes
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.CrossOrigin
@@ -15,24 +14,19 @@ class TweetsController(
     private val tweetService: TweetService
 ) : TweetsApi {
 
-    override fun tweetsGet(): ResponseEntity<List<TweetRes>> {
+    override fun tweetsGet(): ResponseEntity<GetTweetsRes> {
         return ResponseEntity(
             tweetService.getAllTweets(),
             HttpStatus.OK
         )
     }
 
-    override fun tweetsPost(tweetReq: TweetReq): ResponseEntity<Unit> {
-        tweetService.postTweet(tweetReq)
-        return ResponseEntity(
-            HttpStatus.OK
-        )
-    }
-
-    override fun tweetsTweetIdGet(tweetId: Long): ResponseEntity<TweetRes> {
+    /*
+    override fun tweetsTweetIdGet(tweetId: Long): ResponseEntity<GetTweetsByTweetIdRes> {
         return ResponseEntity(
             tweetService.findByTweetId(tweetId),
             HttpStatus.OK
         )
     }
+     */
 }
