# src/main/kotlin/com/example/xt3/domain/model/dto/AccountDto.kt
@@ -1,10 +1,17 @@
 package com.example.xt3.domain.model.dto
 
+import java.time.LocalDateTime
+
 data class AccountDto(
-    val id: AccountId,
+    val accountId: AccountId,
     val userId: UserId,
+    val accountName: String,
     val displayName: String,
-    val description: String,
+    val profileDescription: String,
+    val profileImageUrl: String?,
+    val isPrimary: Boolean,
+    val createdAt: LocalDateTime,
+    val updatedAt: LocalDateTime
 )
 
 @JvmInline
