# src/main/kotlin/com/example/xt3/domain/model/dto/TweetQueryDto.kt
@@ -2,5 +2,5 @@ package com.example.xt3.domain.model.dto
 
 data class TweetQueryDto(
     val accountId: AccountId,
-    val text: String
+    val tweetText: String
 )
